--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATASOURCE_URL=jdbc:mysql://localhost:3306/employee
-DATASOURCE_USER=root
-DATASOURCE_PASSWORD=
+DATASOURCE_URL=jdbc:mysql://auth-db842.hstgr.io:3306/u434641461_employee
+DATASOURCE_USER=u434641461_employee
+DATASOURCE_PASSWORD=M260103c
