--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,73 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# ================
+# Maven / Java
+# ================
+# Build output
+/target/
+/bin/
+/out/
 
-### STS ###
-.apt_generated
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# Maven Wrapper
+/.mvn/wrapper/maven-wrapper.jar
+
+# Eclipse
 .classpath
-.factorypath
 .project
-.settings
-.springBeans
-.sts4-cache
+.settings/
 
-### IntelliJ IDEA ###
-.idea
-*.iws
+# IntelliJ IDEA
 *.iml
-*.ipr
+.idea/
+/*.ipr
+/*.iws
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
+# VS Code
 .vscode/
+
+# ================
+# Operating System
+# ================
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# ================
+# Logs / Runtime
+# ================
+*.log
+logs/
+*.pid
+*.seed
+hs_err_pid*
+recovery/*
+crash-reports/
+
+# ================
+# Security / Secrets
+# ================
+# Environment files
+.env
+.env.*
+# local application properties overrides
+application-local.properties
+application-*.yml
+
+# Keystore / Credentials
+*.jks
+*.p12
+*.pem
+
+# ================
+# Other
+# ================
+# IDE scratch files, generated folders
+tmp/
+**/generated-sources/
