--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATASOURCE_URL=jdbc:mysql://auth-db842.hstgr.io:3306/u434641461_employee
+DATASOURCE_URL=jdbc:mysql://auth-db842.hstgr.io:3306/u434641461_employee\?useSSL=false\&allowPublicKeyRetrieval=true\&serverTimezone=UTC\&sessionVariables=tx_isolation='READ-COMMITTED'
 DATASOURCE_USER=u434641461_employee
 DATASOURCE_PASSWORD=M260103c
