--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,7 @@ spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.connection.isolation=2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# optional, but explicit:
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-# or (older style)
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
