--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.transaction-isolation=TRANSACTION_REPEATABLE_READ
 
-# Hibernate setup
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.hibernate.ddl-auto=update
+# Turn off Hibernate DDL and metadata probing
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+
+# (Optional) logging
 spring.jpa.show-sql=true
