--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 # (Optional) logging
 spring.jpa.show-sql=true
+# Option A: the generic, built-in MySQL dialect (recommended)
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
