--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.transaction-isolation=TRANSACTION_REPEATABLE_READ
 
 # Turn off Hibernate DDL and metadata probing
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 # (Optional) logging
