--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-# Remove this line
-# spring.datasource.hikari.transaction-isolation=TRANSACTION_REPEATABLE_READ
-
-# Rest of your configuration remains the same
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.transaction-isolation=TRANSACTION_REPEATABLE_READ
+
+# Turn off Hibernate DDL and metadata probing
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+
+# (Optional) logging
 spring.jpa.show-sql=true
+# Option A: the generic, built-in MySQL dialect (recommended)
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
