--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATASOURCE_URL=jdbc:mysql://auth-db842.hstgr.io:3306/u434641461_employee?useSSL=false&allowPublicKeyRetrieval=TRUE&serverTimezone=UTC
-DATASOURCE_USER=u434641461_employee
-DATASOURCE_PASSWORD=M260103c
+DATASOURCE_URL=jdbc:mysql://ryHzzCSecaJkXVM.root:19FHSbo5SKaeHCfp@gateway01.ap-southeast-1.prod.aws.tidbcloud.com:4000/test?sslMode=VERIFY_IDENTITY
+DATASOURCE_USER=root
+DATASOURCE_PASSWORD=19FHSbo5SKaeHCfp
