--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,21 @@
 			<version>8.0.33</version> <!-- or latest -->
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test</artifactId>
+			<version>3.4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+			<version>3.4.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
